--- a/docs/includes/css/home.css
+++ b/docs/includes/css/home.css
@@ -483,10 +483,17 @@ footer {
     .login .inner-wrapper #form-container h1.end {
       position: relative;
       color: #fff;
-      font-size: 3em;
+      font-size: 2em;
       margin-top: -2em;
       opacity: 0;
-      transition: 0.8s ease-in-out; }
+      transition: 0.8s ease-in-out;
+      text-align: center; }
+  .login .inner-wrapper .help-block {
+    margin-top: 1.5em; }
+    .login .inner-wrapper .help-block a {
+      color: #333; }
+      .login .inner-wrapper .help-block a:hover {
+        color: orange; }
   .login .inner-wrapper #form-box {
     background: #fff;
     position: relative;
@@ -592,10 +599,17 @@ footer {
     .sign_up .inner-wrapper #form-container h1.end {
       position: relative;
       color: #fff;
-      font-size: 3em;
+      font-size: 2em;
       margin-top: -2em;
       opacity: 0;
-      transition: 0.8s ease-in-out; }
+      transition: 0.8s ease-in-out;
+      text-align: center;
+      padding: 0 4em; }
+      .sign_up .inner-wrapper #form-container h1.end a {
+        text-decoration: none;
+        color: #fff; }
+      .sign_up .inner-wrapper #form-container h1.end a:hover {
+        text-decoration: underline; }
   .sign_up .inner-wrapper #form-box {
     background: #fff;
     position: relative;
@@ -686,6 +700,266 @@ footer {
   .sign_up .inner-wrapper #form-container #form-box {
     font-size: .8em; } }
 /** END OF sign up page form **/
+/***** change password page form ******/
+.change_p footer, .reset_p footer {
+  margin-top: 0; }
+.change_p h2.complete, .reset_p h2.complete {
+  text-align: center;
+  font-size: 2.5em;
+  padding-top: 2em; }
+.change_p .inner-wrapper, .reset_p .inner-wrapper {
+  min-height: 80vh;
+  text-align: center; }
+  .change_p .inner-wrapper h2, .reset_p .inner-wrapper h2 {
+    padding-top: 1em;
+    padding-bottom: 0.5em; }
+  .change_p .inner-wrapper .error-wrapper, .reset_p .inner-wrapper .error-wrapper {
+    padding-top: 2em; }
+    .change_p .inner-wrapper .error-wrapper .pass-error, .reset_p .inner-wrapper .error-wrapper .pass-error {
+      color: red; }
+  .change_p .inner-wrapper form, .reset_p .inner-wrapper form {
+    margin: 1em auto;
+    text-align: center;
+    max-width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: top;
+    align-items: center; }
+    .change_p .inner-wrapper form .form-group, .reset_p .inner-wrapper form .form-group {
+      min-width: 100%;
+      margin: 0 auto;
+      border: 1px solid black;
+      padding: 1em 0;
+      text-align: center;
+      font-size: 1.2em;
+      background: #fff; }
+      .change_p .inner-wrapper form .form-group label, .reset_p .inner-wrapper form .form-group label {
+        min-width: 30%;
+        display: inline-block;
+        padding-right: 1em; }
+      .change_p .inner-wrapper form .form-group input, .reset_p .inner-wrapper form .form-group input {
+        min-width: 40%;
+        display: inline-block; }
+      .change_p .inner-wrapper form .form-group span.help-block, .reset_p .inner-wrapper form .form-group span.help-block {
+        display: inline-block;
+        min-width: 100%;
+        margin: 0 auto;
+        margin-top: 1em;
+        font-style: italic;
+        font-size: .8em; }
+    .change_p .inner-wrapper form input[type=submit], .reset_p .inner-wrapper form input[type=submit] {
+      min-width: 50%;
+      display: inline-block;
+      margin: 1em 0;
+      background: orange;
+      font-weight: bold;
+      border: none;
+      padding: 1em 0; }
+      .change_p .inner-wrapper form input[type=submit]:hover, .reset_p .inner-wrapper form input[type=submit]:hover {
+        background: #333;
+        color: #fff;
+        cursor: pointer; }
+
+/*** END OF change password form ***/
+/***** forgot password form *****/
+.forgot_p footer {
+  margin-top: 0; }
+.forgot_p h2.complete {
+  text-align: center;
+  font-size: 2.5em;
+  padding-top: 2em; }
+.forgot_p .inner-wrapper {
+  min-height: 80vh;
+  text-align: center; }
+  .forgot_p .inner-wrapper h2 {
+    padding-top: 1em;
+    padding-bottom: 0.5em; }
+  .forgot_p .inner-wrapper .error-wrapper {
+    padding-top: 2em; }
+    .forgot_p .inner-wrapper .error-wrapper .pass-error {
+      color: red; }
+  .forgot_p .inner-wrapper form {
+    margin: 1em auto;
+    text-align: center;
+    max-width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: top;
+    align-items: center; }
+    .forgot_p .inner-wrapper form fieldset {
+      width: 100%; }
+    .forgot_p .inner-wrapper form .form-group {
+      width: 100%;
+      margin: 0 auto;
+      padding: 1em 0;
+      text-align: center;
+      font-size: 1.2em;
+      background: #fff; }
+      .forgot_p .inner-wrapper form .form-group label {
+        min-width: 50%;
+        display: inline-block;
+        padding-right: 1em; }
+      .forgot_p .inner-wrapper form .form-group input {
+        min-width: 50%;
+        display: inline-block; }
+      .forgot_p .inner-wrapper form .form-group span.help-block {
+        display: inline-block;
+        min-width: 100%;
+        margin: 0 auto;
+        margin-top: 1em;
+        font-style: italic;
+        font-size: .8em; }
+    .forgot_p .inner-wrapper form input[type=submit] {
+      min-width: 50%;
+      display: inline-block;
+      margin: 1em 0;
+      background: orange;
+      font-weight: bold;
+      border: none;
+      padding: 1em 0; }
+      .forgot_p .inner-wrapper form input[type=submit]:hover {
+        background: #333;
+        color: #fff;
+        cursor: pointer; }
+
+/*** END OF forgot password form ***/
+/***** reset password form *****/
+.reset_p footer {
+  margin-top: 0; }
+.reset_p h2.complete {
+  text-align: center;
+  font-size: 2.5em;
+  padding-top: 2em; }
+.reset_p .inner-wrapper {
+  min-height: 80vh;
+  text-align: center; }
+  .reset_p .inner-wrapper h2 {
+    padding-top: 1em;
+    padding-bottom: 0.5em; }
+  .reset_p .inner-wrapper .error-wrapper {
+    padding-top: 2em; }
+    .reset_p .inner-wrapper .error-wrapper .pass-error {
+      color: red; }
+  .reset_p .inner-wrapper .reset-error-wrapper {
+    padding-top: 3em;
+    color: red;
+    min-height: 60vh; }
+    .reset_p .inner-wrapper .reset-error-wrapper a {
+      color: #000;
+      text-decoration: none; }
+      .reset_p .inner-wrapper .reset-error-wrapper a:hover {
+        text-decoration: underline; }
+  .reset_p .inner-wrapper .success-wrapper {
+    padding-top: 3em;
+    min-height: 60vh; }
+  .reset_p .inner-wrapper form {
+    margin: 1em auto;
+    text-align: center;
+    max-width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: top;
+    align-items: center; }
+    .reset_p .inner-wrapper form fieldset {
+      width: 100%; }
+    .reset_p .inner-wrapper form .form-group {
+      width: 100%;
+      margin: 0 auto;
+      padding: 1em 0;
+      text-align: center;
+      font-size: 1.2em;
+      background: #fff; }
+      .reset_p .inner-wrapper form .form-group label {
+        min-width: 50%;
+        display: inline-block;
+        padding-right: 1em; }
+      .reset_p .inner-wrapper form .form-group input {
+        min-width: 50%;
+        display: inline-block; }
+      .reset_p .inner-wrapper form .form-group span.help-block {
+        display: inline-block;
+        min-width: 100%;
+        margin: 0 auto;
+        margin-top: 1em;
+        font-style: italic;
+        font-size: .8em; }
+    .reset_p .inner-wrapper form input[type=submit] {
+      min-width: 50%;
+      display: inline-block;
+      margin: 1em 0;
+      background: orange;
+      font-weight: bold;
+      border: none;
+      padding: 1em 0; }
+      .reset_p .inner-wrapper form input[type=submit]:hover {
+        background: #333;
+        color: #fff;
+        cursor: pointer; }
+
+/****************************************
+----- general layout for programs -------
+*****************************************/
+.inner-wrapper .programs-wrapper {
+  width: 70%;
+  margin: 0 auto;
+  padding: 4em 0; }
+  .inner-wrapper .programs-wrapper .program {
+    background: #eee;
+    margin-bottom: 3em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1em;
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+    padding: 0; }
+    .inner-wrapper .programs-wrapper .program .program-img {
+      border-right: 1px solid black; }
+      .inner-wrapper .programs-wrapper .program .program-img img {
+        width: 100%;
+        height: 100%; }
+    .inner-wrapper .programs-wrapper .program .program-content {
+      padding: 1em;
+      text-align: center; }
+      .inner-wrapper .programs-wrapper .program .program-content h3 {
+        font-size: 3em;
+        color: orange;
+        margin: .5em 0;
+        line-height: 1.2em; }
+      .inner-wrapper .programs-wrapper .program .program-content p {
+        line-height: 2em;
+        padding: 0 1em; }
+      .inner-wrapper .programs-wrapper .program .program-content a {
+        margin-top: 2em;
+        margin-bottom: 1em;
+        display: inline-block;
+        box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+        padding: 1em 4em;
+        border-radius: 30px;
+        color: #333;
+        background: #fff;
+        text-decoration: none;
+        font-variant: small-caps; }
+        .inner-wrapper .programs-wrapper .program .program-content a:hover {
+          color: #fff;
+          background: #333; }
+
+/* media queries */
+@media (max-width: 1000px) {
+  .inner-wrapper .programs-wrapper {
+    width: 100%;
+    padding: 4em 2em; } }
+@media (max-width: 800px) {
+  .inner-wrapper .programs-wrapper .program {
+    grid-template-columns: 1fr; }
+    .inner-wrapper .programs-wrapper .program .program-img {
+      border-right: none; } }
+@media (max-width: 500px) {
+  .inner-wrapper .showcase-img h2 {
+    font-size: 3em;
+    margin-top: 40%; }
+  .inner-wrapper .programs-wrapper .program .program-content h3 {
+    font-size: 2.5em; }
+  .inner-wrapper .programs-wrapper .program .program-img {
+    border-right: none; } }
 /*************************************
  ----- page specific navigation -----
  ************************************* */
@@ -694,9 +968,8 @@ footer {
 .programs_fem .programs_femLink,
 .priv_coach .priv_coachLink,
 .hock_train .hock_trainLink,
-.hock_train_y .hock_train_yLink,
-.hock_train_j .hock_train_jLink,
-.hock_train_p .hock_train_pLink,
+.hock_train_inseason .hock_train_inLink,
+.hock_train_offseason .hock_train_offLink,
 .blog .blogLink,
 .about .aboutLink {
   background: #333 !important;
@@ -833,14 +1106,66 @@ footer {
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
       .inner-wrapper .athletes .athletes-container .athlete {
         box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-        background: #eee; }
-        .inner-wrapper .athletes .athletes-container .athlete h4 {
+        background: #eee;
+        /* modal stylings */ }
+        .inner-wrapper .athletes .athletes-container .athlete a {
           text-align: center;
-          margin-top: 10px; }
+          margin-top: 10px;
+          color: #333;
+          text-decoration: none; }
+          .inner-wrapper .athletes .athletes-container .athlete a:hover {
+            color: orange; }
         .inner-wrapper .athletes .athletes-container .athlete img {
           width: 100%;
           height: 80%; }
+        .inner-wrapper .athletes .athletes-container .athlete .athlete-modal {
+          display: none;
+          position: fixed;
+          z-index: 1;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          background-color: rgba(0, 0, 0, 0.5); }
+          .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content {
+            background-color: #f4f4f4;
+            margin: 20% auto;
+            width: 60%;
+            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.7);
+            animation-name: modalOpen;
+            animation-duration: 1s; }
+            .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-header {
+              background: coral;
+              padding: 15px; }
+              .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-header h3 {
+                color: #fff;
+                margin: 0; }
+              .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-header .closeBtn {
+                color: #fff;
+                float: right;
+                font-size: 30px; }
+                .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-header .closeBtn:hover, .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-header .closeBtn:focus {
+                  color: #000;
+                  text-decoration: none;
+                  cursor: pointer; }
+            .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-body {
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+              grid-column-gap: 2em;
+              padding: 1em; }
+              .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-body img {
+                margin: 0 auto;
+                width: 60%;
+                border: 5px solid coral;
+                border-radius: 15px; }
 
+/* fade in modal */
+@keyframes modalOpen {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 /* media queries */
 @media (max-width: 1200px) {
   .inner-wrapper {
