--- a/docs/includes/css/home.css
+++ b/docs/includes/css/home.css
@@ -1107,9 +1107,9 @@ footer {
       .inner-wrapper .athletes .athletes-container .athlete {
         box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
         background: #eee;
+        text-align: center;
         /* modal stylings */ }
         .inner-wrapper .athletes .athletes-container .athlete a {
-          text-align: center;
           margin-top: 10px;
           color: #333;
           text-decoration: none; }
@@ -1130,7 +1130,7 @@ footer {
           background-color: rgba(0, 0, 0, 0.5); }
           .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content {
             background-color: #f4f4f4;
-            margin: 20% auto;
+            margin: 10% auto;
             width: 60%;
             box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.7);
             animation-name: modalOpen;
@@ -1153,7 +1153,8 @@ footer {
               display: grid;
               grid-template-columns: 1fr 1fr;
               grid-column-gap: 2em;
-              padding: 1em; }
+              padding: 1em;
+              text-align: left; }
               .inner-wrapper .athletes .athletes-container .athlete .athlete-modal .modal-content .modal-body img {
                 margin: 0 auto;
                 width: 60%;
